[tool.poetry]
name = "bitramp"
version = "0.1.0"
description = ""
authors = ["LONGYKING <kingsleyonyeneke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
controlflow = "^0.11.2"
fastapi = {extras = ["standard"], version = "^0.115.3"}
duckduckgo-search = "^6.3.3"
langchain-community = "^0.3.5"
chromadb = "^0.5.17"
fastapi-simple-security = "^1.3.0"
supabase = "^2.9.1"
pq = "^1.9.1"
sqlmodel = "^0.0.22"


#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
gunicorn = "^23.0.0"
uvicorn = "^0.32.0"
[tool.poetry.dev-dependencies]

[build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

[tool.dockerize]
entrypoint = ["poetry", "run", "fastapi", "run", "api/main.py", "--port", "8000"]
